# aws-second-s3

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
src/: main.py
